--- a/.travis.yml
+++ b/.travis.yml
@@ -6,9 +6,7 @@ services:
 
 env:
   global:
-    - PI_APP=christmas-lights-trigger
-  matrix:
-    - PI_TYPE=rpi3
+    - PI_APP=rfsockets
 
 script: bash travis.sh || travis_terminate 1;
 
